WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216450
Fix root cause of problem with text replacements at the beginnings of sentences so we can remove the workaround
https://bugs.webkit.org/show_bug.cgi?id=216450
Summary
Fix root cause of problem with text replacements at the beginnings of sentenc...
Darin Adler
Reported
2020-09-12 16:22:08 PDT
Fix root case of problem with text replacements at the beginnings of sentences so we can remove the workaround
Attachments
Patch
(8.22 KB, patch)
2020-09-12 16:25 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(8.19 KB, patch)
2020-09-12 16:27 PDT
,
Darin Adler
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2020-09-12 16:25:39 PDT
Comment hidden (obsolete)
Created
attachment 408624
[details]
Patch
Darin Adler
Comment 2
2020-09-12 16:27:50 PDT
Created
attachment 408626
[details]
Patch
Darin Adler
Comment 3
2020-09-12 21:55:15 PDT
Committed
r266987
: <
https://trac.webkit.org/changeset/266987
>
Radar WebKit Bug Importer
Comment 4
2020-09-12 21:56:14 PDT
<
rdar://problem/68788198
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug